--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body id="<%= controller.controller_name %>-<%= controller.action_name %>">
+  <body>
     <%= render 'shared/header' %>
     <%= yield %>
     <%= render 'shared/footer' %>
