--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -2,24 +2,24 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-#portfolios-index {
   .content-wrapper {
+    max-width: 1080px;
+    margin: 0 auto;
+    margin-top: 120px;
 
     .content-block {
       display: flex;
       border: 2px solid #000;
-      padding: 20px;
-      width: 100%;
+      // padding: 20px;
+      // width: 100%; 
       flex-wrap: wrap;
 
       .content {
         border: 2px solid #000;
         padding: 5px;
-        width: 30%;
-        margin: 10px;
+        width: 25%;
+        margin: 10px 37px;
         
-        
-
         .portfolio-information {
         
           .portfolio-image {
@@ -69,4 +69,3 @@
       }
     }
   }
-}
