--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -17,7 +17,7 @@
           </div>
           <div class="overview">
             <div class="portfolio-title">
-              作品タイトル
+              作品タイトル<%= i %>
             </div>
             <div class="user-name">
               ユーザーネーム
