--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -42,7 +42,7 @@ img {
   padding: 10px;
  } */
 
-/* headerとサイドバーのcss */
+ /* headerのcss */
 @import url('https://fonts.googleapis.com/css?family=Varela+Round');
 html, body {
     overflow-x: hidden;
@@ -51,7 +51,7 @@ html, body {
 body {
     background: #fff;
     padding: 0;
-    margin: 0 auto;
+    margin: 0;
     font-family: 'Varela Round', sans-serif;
 }
 .header {
@@ -66,6 +66,27 @@ body {
     overflow: hidden;
     z-index: 10;
 }
+
+/* .main {
+    margin: 0 auto;
+    display: block;
+    height: 100%;
+    margin-top: 60px;
+}
+.mainInner{
+    display: table;
+    height: 100%;
+    width: 100%;
+    text-align: center;
+}
+.mainInner div{
+    display:table-cell;
+    vertical-align: middle;
+    font-size: 3em;
+    font-weight: bold;
+    letter-spacing: 1.25px;
+} */
+
 #sidebarMenu {
     height: 100%;
     position: fixed;
@@ -170,7 +191,6 @@ input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
     margin-top: -9px;
 }
 
-
- #footer {
+ /* #footer {
   text-align: center;
- }
+ } */
