--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -1,24 +1,28 @@
 // Place all the styles related to the portfolios controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-
+#portfolios-index {
   .content-wrapper {
-    max-width: 1080px;
-    margin: 0 auto;
-    margin-top: 120px;
+    // max-width: 1080px;
+    // margin: 0 auto;
+    // margin-top: 120px;
 
     .content-block {
       display: flex;
-      border: 2px solid #000;
+      // border: 2px solid #000;
       // padding: 20px;
       // width: 100%; 
       flex-wrap: wrap;
+      margin-top: 60px;
+      // margin: 60 auto;
+      margin-left: 251px;
+      // justify-content: space-between;
 
       .content {
         border: 2px solid #000;
-        padding: 5px;
-        width: 25%;
-        margin: 10px 37px;
+        border-radius: 20px;
+        width: 30%;
+        margin: 12px;
         
         .portfolio-information {
         
@@ -69,3 +73,4 @@
       }
     }
   }
+}
