--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,8 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
-  <body>
+  
+  <body id="<%= controller.controller_name %>-<%= controller.action_name %>">
     <%= render 'shared/header' %>
     <%= yield %>
     <%= render 'shared/footer' %>
