--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -18,7 +18,10 @@
 </div> -->
 
 
-<div class="header">
+<div class="header">  
+  <div class="logo">Portfolio_List</div>
+  <div class="link">リンク</div>
+</div>
   <input type="checkbox" class="openSidebarMenu" id="openSidebarMenu">
   <label for="openSidebarMenu" class="sidebarIconToggle">
     <div class="spinner diagonal part-1"></div>
@@ -35,4 +38,3 @@
       <li><a href="https://www.linkedin.com/in/plavookac/" target="_blank">Linkedin</a></li>
     </ul>
   </div>
-</div>
