--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -1,6 +1,7 @@
 // Place all the styles related to the portfolios controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
 #portfolios-index {
   .content-wrapper {
     // max-width: 1080px;
@@ -66,7 +67,7 @@
             }
 
             .user-name {
-
+              font-weight: bold;
             }
           }
         }
