--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html  lang="ja">
   <head>
+    <meta charset="UTF-8" />
     <title>Myapp</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
   </head>
   
-  <body id="<%= controller.controller_name %>-<%= controller.action_name %>">
+  <body>
     <%= render 'shared/header' %>
     <%= yield %>
     <%= render 'shared/footer' %>
