--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -2,76 +2,78 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-#portfolios-index {
-  .content-wrapper {
-    // max-width: 1080px;
-    // margin: 0 auto;
-    // margin-top: 120px;
+// #portfolios-index {
+//   .content-wrapper {
+//     // max-width: 1080px;
+//     // margin: 0 auto;
+//     // margin-top: 120px;
 
-    .content-block {
-      display: flex;
-      // border: 2px solid #000;
-      // padding: 20px;
-      // width: 100%; 
-      flex-wrap: wrap;
-      margin-top: 60px;
-      // margin: 60 auto;
-      margin-left: 251px;
-      // justify-content: space-between;
+//     .content-block {
+//       display: flex;
+//       // border: 2px solid #000;
+//       // padding: 20px;
+//       // width: 100%; 
+//       flex-wrap: wrap;
+//       margin-top: 68px;
+//       // margin: 60 auto;
+//       margin-left: 251px;
+//       // justify-content: space-between;
 
-      .content {
-        border: 2px solid #000;
-        border-radius: 20px;
-        width: 30%;
-        margin: 12px;
+//       .content {
+//         border: 2px solid #000;
+//         border-radius: 20px;
+//         width: 30%;
+//         margin: 12px;
+//         // max-width: 30%;
+//         // min-width: 30%;
         
-        .portfolio-information {
+//         .portfolio-information {
         
-          .portfolio-image {
-            position: relative;
-            width: 70%;
-            margin : 0 auto
-           }
+//           .portfolio-image {
+//             position: relative;
+//             width: 70%;
+//             margin : 0 auto
+//            }
 
-          .favorite {
-            width: 50px;
-            height: 50px;
-            color: #ffffff;
-            background-color: #2779bd;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 1.5rem;
-            border-radius: 50%;
-            cursor: pointer;
-            position: absolute;
-            top: 0;
-            left: 100%;
-           }
+//           .favorite {
+//             width: 50px;
+//             height: 50px;
+//             color: #ffffff;
+//             background-color: #2779bd;
+//             display: flex;
+//             justify-content: center;
+//             align-items: center;
+//             font-size: 1.5rem;
+//             border-radius: 50%;
+//             cursor: pointer;
+//             position: absolute;
+//             top: 0;
+//             left: 100%;
+//            }
             
-        }
+//         }
         
-        .user-information {
-          display: flex;
+//         .user-information {
+//           display: flex;
 
-          .user-image {
-            width: 20%;
-          }
+//           .user-image {
+//             width: 20%;
+//           }
 
-          .overview {
-            margin-left: 15px;
-            margin-top: 6px;
+//           .overview {
+//             margin-left: 15px;
+//             margin-top: 6px;
 
-            .portfolio-title {
-              font-weight: bold;
-            }
+//             .portfolio-title {
+//               font-weight: bold;
+//             }
 
-            .user-name {
-              font-weight: bold;
-            }
-          }
-        }
-      }
-    }
-  }
-}
+//             .user-name {
+//               font-weight: bold;
+//             }
+//           }
+//         }
+//       }
+//     }
+//   }
+// }
