--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,4 +1,5 @@
-<div class="content-wrapper">
+<main>contents</main>
+  <!-- <div class="content-wrapper">
   <div class="content-block">
     <% (1..10).each do |i| %>
       <div class="content">
@@ -30,4 +31,4 @@
       </div>
     <% end %>
   </div>
-</div>
+</div> -->
