--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -74,22 +74,26 @@ header {
     padding: 8px;
     .tool-faIcon {
       font-size: 24px;
+      color: #545353;
     }
   }
   .notice {
     padding: 8px;
     .notice-faIcon {
       font-size: 24px;
+      color: #545353;
     }
   }
   .icon {
     height: 40px;
     width: 60px;
     padding: 1px 6px;
+    border-radius: 20px;
     .user-img {
       height: 100%;
       object-fit: contain;
       text-align: center;
+      border-radius: 20px;
     }
   }
 
