--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,4 +1,6 @@
-<main>contents</main>
+<div>
+  ここにmainのコンテンツが入る。
+</div>
   <!-- <div class="content-wrapper">
   <div class="content-block">
     <% (1..10).each do |i| %>
