--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,5 +1,6 @@
 // 新custom.scss
 
+// デフォルトでかかっている要素を消すため
 * {
   padding: 0;
   margin: 0;
@@ -10,6 +11,7 @@
 //   max-width: 100%;
 // }
 
+// 固定header
 header {
   position: fixed;
   top: 0;
@@ -47,7 +49,7 @@ header {
         height: 100%;
         width: 556px;
         border: solid 1px rgb(204,204,204);
-        font-size: 16px; //スマホサイズだと画面が拡大してしまうため16pxに指定する。
+        font-size: 16px; // スマホサイズだと画面が拡大してしまうため16pxに指定する。
       }
       .serach-btn {
         height: 100%;
@@ -96,12 +98,38 @@ header {
       border-radius: 20px;
     }
   }
-
-
 }
 
-main { 
-  background-color: rgb(60, 60, 128);
-  height: 150vh;
+// sidebarのcssとmainの表示領域の確保。
+.wrapper {
   margin-top: 56px;
+  background-color: rgb(237, 237, 250);
+  height: 100vh;
+  display: flex;
+  flex-direction: row;
+  .side-bar {
+    overflow-y: scroll;
+    width: 240px;
+    .side-bar-wrapper {
+      height: 150vh;
+      background-color: rgb(228, 56, 13);
+      width: 100%;
+    }
+  }
+  main {
+    overflow-y: scroll;
+    background-color: rgb(60, 60, 128);
+    flex: 1;
+    .main-wrapper {
+      height: 150vh;
+    }
+  }
 }
+
+
+// 仮main css
+// main { 
+//   background-color: rgb(60, 60, 128);
+//   height: 150vh;
+//   margin-top: 56px;
+// }
