--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,6 +1,49 @@
-<div class="side-bar">
-  <div class="side-bar-wrapper">
-    sidebar
+<div class="sideBar">
+  <div class="sideBar-wrapper">
+    <div class="sideBar-item">
+      <!-- <div class="sideBar-item-title">登録チャンネル</div> -->
+      <div class="sideBar-item-element">
+        <i class="fas fa-home fa-fw sideBar-item-element-faIcon"></i>
+        <span class="sideBar-item-element-label">ホーム</span>
+      </div>
+      <div class="sideBar-item-element">
+        <i class="fas fa-user fa-fw sideBar-item-element-faIcon"></i>
+        <span class="sideBar-item-element-label">マイページ</span>
+      </div>
+      <div class="sideBar-item-element">
+        <i class="fas fa-plus fa-fw sideBar-item-element-faIcon"></i>
+        <span class="sideBar-item-element-label">作品投稿</span>
+      </div>
+      <div class="sideBar-item-element">
+        <i class="fas fa-star fa-fw sideBar-item-element-faIcon"></i>
+        <span class="sideBar-item-element-label">お気に入り一覧</span>
+      </div>
+      <div class="sideBar-divider"></div>
+      <div class="sideBar-item-element">
+        <i class="fas fa-home fa-fw sideBar-item-element-faIcon"></i>
+        <span class="sideBar-item-element-label">ホーム</span>
+      </div>
+      <div class="sideBar-item-element">
+        <i class="fas fa-user fa-fw sideBar-item-element-faIcon"></i>
+        <span class="sideBar-item-element-label">マイページ</span>
+      </div>
+      <div class="sideBar-item-element">
+        <i class="fas fa-plus fa-fw sideBar-item-element-faIcon"></i>
+        <span class="sideBar-item-element-label">作品投稿</span>
+      </div>
+      <div class="sideBar-item-element">
+        <i class="fas fa-star fa-fw sideBar-item-element-faIcon"></i>
+        <span class="sideBar-item-element-label">お気に入り一覧</span>
+      </div>
+      <div class="sideBar-divider"></div>
+      <div class="sideBar-foot">
+        <div class="sideBar-foot-links">
+          <a href="#" class="sideBar-foot-links-link">ここにリンクが入ります</a>
+        </div>
+        <div class="sidebar-foot-copyright">
+          ©2021 krgy Inc.
+        </div>
+      </div>
+    </div>
   </div>
 </div>
-
