--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,7 +1,13 @@
+<input id="menu" type="checkbox" />
+<label for="menu" class="open">
+  <i class="fas fa-bars toglle-faIcon"></i>
+</label>
+<label for="menu" class="back"></label>
+
 <div class="sideBar">
   <div class="sideBar-wrapper">
     <div class="sideBar-item">
-      <!-- <div class="sideBar-item-title">登録チャンネル</div> -->
+      <div class="sideBar-item-title">UserIconとUserName</div>
       <div class="sideBar-item-element">
         <i class="fas fa-home fa-fw sideBar-item-element-faIcon"></i>
         <span class="sideBar-item-element-label">ホーム</span>
