--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,1 +1,30 @@
-
+<footer>
+  <div class="footer">
+    <div class="footer-wrapper">
+      <div class="footer-item">
+        <div class="footer-item-element">
+          <i class="fas fa-home fa-fw footer-item-element-faIcon"></i>
+          <span class="footer-item-element-label">ホーム</span>
+        </div>
+        <div class="footer-item-element">
+          <i class="fas fa-user fa-fw footer-item-element-faIcon"></i>
+          <span class="footer-item-element-label">マイページ</span>
+        </div>
+        <div class="footer-item-element">
+          <i class="fas fa-plus fa-fw footer-item-element-faIcon"></i>
+          <span class="footer-item-element-label">作品投稿</span>
+        </div>
+        <div class="footer-item-element">
+          <i class="fas fa-star fa-fw footer-item-element-faIcon"></i>
+          <span class="footer-item-element-label">お気に入り</span>
+        </div>
+        <div class="footer-item-element">
+          <input id="menu" type="checkbox" />
+          <label for="menu" class="sideBar-open-footer-toglle">
+            <i class="fas fa-bars fa-fw toglle-faIcon"></i>
+          </label>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
