--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -14,7 +14,7 @@
       </button>
     </div>
   </div>
-  <div class="camera">
+  <!-- <div class="camera">
     <%= image_tag "camera.jpg", class: "camera-img" %>
   </div>
   <div class="tool">
@@ -22,7 +22,7 @@
   </div>
   <div class="notice">
     <i class="far fa-bell notice-faIcon"></i>
-  </div>
+  </div> -->
   <div class="icon">
     <%= image_tag 'user.JPG', class: 'user-img' %>
   </div>
