--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,8 +1,7 @@
 <input id="menu" type="checkbox" />
-<label for="menu" class="open">
+<label for="menu" class="sideBar-open-toglle">
   <i class="fas fa-bars toglle-faIcon"></i>
 </label>
-<label for="menu" class="back"></label>
 
 <div class="sideBar">
   <div class="sideBar-wrapper">
