--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,18 +9,19 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
     
   </head>
   <body>
     <%= render 'shared/header' %>
-    <div class="wrapper">
+    <div class="wrapper"> 
       <%= render 'shared/sidebar' %>
       <main>
         <div class="main-wrapper">
           <%= yield %>
+          <%= render 'shared/footer' %>
         </div>
       </main>
     </div>
-    <%= render 'shared/footer' %>
   </body>
 </html>
