--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -21,7 +21,7 @@
         <div class="footer-item-element">
           <input id="menu" type="checkbox" />
           <label for="menu" class="sideBar-open-footer-toglle">
-            <i class="fas fa-bars fa-fw toglle-faIcon"></i>
+            <i class="fas fa-bars fa-fw"></i>
           </label>
         </div>
       </div>
