--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -2,6 +2,7 @@
 <label for="menu" class="sideBar-open-toglle">
   <i class="fas fa-bars toglle-faIcon"></i>
 </label>
+<label for="menu" class="back"></label>
 
 <div class="sideBar">
   <div class="sideBar-wrapper">
