portfolios_indexのレイアウト完成

--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -2,78 +2,103 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-// #portfolios-index {
-//   .content-wrapper {
-//     // max-width: 1080px;
-//     // margin: 0 auto;
-//     // margin-top: 120px;
+.portfolios-index {
+  .content-wrapper {
+    // max-width: 1080px;
+    // margin: 0 auto;
+    // margin-top: 120px;
 
-//     .content-block {
-//       display: flex;
-//       // border: 2px solid #000;
-//       // padding: 20px;
-//       // width: 100%; 
-//       flex-wrap: wrap;
-//       margin-top: 68px;
-//       // margin: 60 auto;
-//       margin-left: 251px;
-//       // justify-content: space-between;
+    .content-block {
+      display: flex;
+      // border: px solid #000;
+      // padding: 20px;
+      // width: auto; 
+      flex-wrap: wrap;
+      // height: auto;
+      // margin-top: 68px;
+      // margin: 60 auto;
+      // margin-left: 251px;
+      // justify-content: space-between;
+      
 
-//       .content {
-//         border: 2px solid #000;
-//         border-radius: 20px;
-//         width: 30%;
-//         margin: 12px;
-//         // max-width: 30%;
-//         // min-width: 30%;
+      .content {
+        border: 1px solid #000;
+        border-radius: 20px;
+        margin: 20px 40px;
+        width: 335px;
+        // width: 30%;
+        // margin: 12px;
+        // max-width: 30%;
+        // min-width: 30%;
         
-//         .portfolio-information {
-        
-//           .portfolio-image {
-//             position: relative;
-//             width: 70%;
-//             margin : 0 auto
-//            }
+        .portfolio-information {
+          .portfolio-image {
+            // position: relative;
+            // width: 70%;
+            // margin : 0 auto
+            .portfolio-image-icon {
+              width: 335px;
+              border-bottom: 1px solid;
+            }
+           }
+          .favorite {
+            // width: 50px;
+            // height: 50px;
+            // color: #ffffff;
+            // background-color: #2779bd;
+            // display: flex;
+            // justify-content: center;
+            // align-items: center;
+            // font-size: 1.5rem;
+            // border-radius: 50%;
+            // cursor: pointer;
+            // position: absolute;
+            // top: 0;
+            // left: 100%;
+           }
+        }
+        .user-information {
+          display: flex;
 
-//           .favorite {
-//             width: 50px;
-//             height: 50px;
-//             color: #ffffff;
-//             background-color: #2779bd;
-//             display: flex;
-//             justify-content: center;
-//             align-items: center;
-//             font-size: 1.5rem;
-//             border-radius: 50%;
-//             cursor: pointer;
-//             position: absolute;
-//             top: 0;
-//             left: 100%;
-//            }
-            
-//         }
-        
-//         .user-information {
-//           display: flex;
+          .user-image {
+            // width: 20%;
+            // height: 36px;
+            // height: 48px;
+            // padding: 1px 6px 1px 6px;
+            height: 60px;
+            .user-image-icon {
+              // width: 36px;
+              // height: 36px;
+              // height: 48px;
+              // text-align: center;
+              height: 100%;
+              object-fit: contain;
+              border-radius: 35px;
+            }
+          }
+          .overview {
+            margin-left: 15px;
+            // margin-top: 6px;
+            flex: 1;
 
-//           .user-image {
-//             width: 20%;
-//           }
+            .portfolio-title {
+              font-weight: bold;
+            }
+            .user-name {
+              // font-weight: bold;
+            }
+          }
+          .favorite {
+            padding-top: 19px;
+            padding-right: 5px;
+            .favorite-btn {
+              .favorite-icon {
 
-//           .overview {
-//             margin-left: 15px;
-//             margin-top: 6px;
-
-//             .portfolio-title {
-//               font-weight: bold;
-//             }
-
-//             .user-name {
-//               font-weight: bold;
-//             }
-//           }
-//         }
-//       }
-//     }
-//   }
-// }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
