--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -5,9 +5,9 @@
   box-sizing: border-box;
 }
 
-/*img {
-  max-width: 100%;
-}*/
+// img {
+//   max-width: 100%;
+// }
 
 // 固定header
 header {
@@ -96,7 +96,6 @@ header {
     height: 40px;
     width: 60px;
     padding: 1px 6px 1px 6px;
-    border-radius: 20px;
 
     .user-img {
       height: 100%;
@@ -124,18 +123,9 @@ input[type="checkbox"]:checked ~ .sideBar {
   left: -240px;
 }
 
-/* input[type="checkbox"]:checked ~ .back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.8) !important;
-} */
-
-
-
 // sidebarのデザインとmainの表示領域の確保。
 .wrapper {
-  margin-top: 56px;
+  // margin-top: 56px; 
   background-color: rgb(237, 237, 250);
   height: 100vh;
   display: flex;
@@ -144,11 +134,13 @@ input[type="checkbox"]:checked ~ .sideBar {
   .sideBar {
     overflow-y: scroll; // はみ出た部分をスクロール
     width: 240px;
+    margin-top: 56px;
     
     .sideBar-wrapper {
       height: 150vh;
       background-color: rgb(255, 255, 255);
       width: 100%;
+      // margin-top: 56px;
 
       .sideBar-item {
         .sideBar-item-title {
@@ -205,8 +197,9 @@ input[type="checkbox"]:checked ~ .sideBar {
   }
   main {
     overflow-y: scroll; // はみ出た部分をスクロール
-    // background-color: rgb(60, 60, 128);
+    background-color: rgb(250, 245, 245);
     flex: 1;
+    margin-top: 56px;
 
     .main-wrapper {
       height: 150vh;
@@ -240,6 +233,7 @@ input[type="checkbox"]:checked ~ .sideBar {
   input[type="checkbox"]:checked ~ .sideBar {
     position: fixed;
     left: 0px;
+    margin-top: 0;
   }
   input[type="checkbox"]:checked ~ .back {
     position: fixed;
@@ -274,8 +268,6 @@ input[type="checkbox"]:checked ~ .sideBar {
           .footer-item-element-label {}
           .sideBar-open-footer-toglle {
             font-size: 32px;
-            // opacity: 0;
-          
           }
         }
       }
