--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -7,7 +7,6 @@
             <div class="portfolio-image">
               <%= image_tag "thumbnail.JPG" , class: "portfolio-image-icon" %>
             </div>
-            
           </div>
           <div class="user-information">
             <div class="user-image">
@@ -20,7 +19,7 @@
               <div class="user-name">
                 ユーザーネーム
               </div>
-              <div class="posted date">
+              <div class="posted-date">
                 投稿日
               </div>
             </div>
