--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -25,7 +25,7 @@
         border: 1px solid #000;
         border-radius: 20px;
         margin: 20px 40px;
-        width: 335px;
+        // width: 335px;
         // width: 30%;
         // margin: 12px;
         // max-width: 30%;
@@ -40,22 +40,7 @@
               width: 335px;
               border-bottom: 1px solid;
             }
-           }
-          .favorite {
-            // width: 50px;
-            // height: 50px;
-            // color: #ffffff;
-            // background-color: #2779bd;
-            // display: flex;
-            // justify-content: center;
-            // align-items: center;
-            // font-size: 1.5rem;
-            // border-radius: 50%;
-            // cursor: pointer;
-            // position: absolute;
-            // top: 0;
-            // left: 100%;
-           }
+          }
         }
         .user-information {
           display: flex;
@@ -83,9 +68,14 @@
 
             .portfolio-title {
               font-weight: bold;
+              font-size: 16px;
             }
             .user-name {
               // font-weight: bold;
+              font-size: 14px;
+            }
+            .posted-date {
+              font-size: 14px;
             }
           }
           .favorite {
@@ -94,6 +84,54 @@
             .favorite-btn {
               .favorite-icon {
 
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 575px) {
+  .portfolios-index {
+    .content-wrapper {
+      .content-block {
+        padding: 1px;
+        .content {
+          margin: 0;
+          // width: 320px;
+          width: 100%;
+
+          .portfolio-information {
+            .portfolio-image {
+              .portfolio-image-icon {
+                // width: 320px;
+                height: 180px;
+                width: 100%;
+              }
+            }
+          }
+          .user-information {
+            .user-image {
+              .user-image-icon {
+              }
+            }
+            .overview {
+              .portfolio-title {
+                font-size: 14px;
+              }
+              .user-name {
+                font-size: 12px;
+              }
+              .posted-date {
+                font-size: 12px;
+              }
+            }
+            .favorite {
+              .favorite-btn {
+                .favorite-icon {  
+                }
               }
             }
           }
