--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -82,9 +82,7 @@
             padding-top: 19px;
             padding-right: 5px;
             .favorite-btn {
-              .favorite-icon {
-
-              }
+              .favorite-icon {}
             }
           }
         }
@@ -135,6 +133,76 @@
               }
             }
           }
+        }
+      }
+    }
+  }
+}
+
+.portfolios-show {
+  .content-wrapper {
+    .content-block {
+      text-align: center;
+      
+      .content {
+        display: inline-block;
+        text-align: left;
+        
+        .portfolio-image-movie-block {
+          .portfolio-image-icon {
+            width: 640px;
+            // height: 360px;
+          }
+          .user-image-icon {
+            width: 640px;
+            // height: 360px;
+          }
+        }
+        .portfolio-title {
+          font-size: 18px;
+        }
+        .overview {
+          display: flex;
+          justify-content: space-between;
+          .posted-date {
+            font-size: 14px;
+          }
+          .favorite {
+            font-size: 13px;
+          }
+        }
+        .user-information {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          border-top: 1px solid;
+          margin: 16px 0;
+
+          .user-information-image-name {
+            display: flex;
+            align-items: center;
+
+            .user-image {
+              height: 60px;
+              margin-right: 16px;
+
+              .user-image-icon {
+                height: 100%;
+                object-fit: contain;
+                border-radius: 35px;
+              }
+            }
+            .user-name {
+              font-size: 14px;
+            }
+          }
+          .portfolio-link {
+            // height: 50px;
+          }
+        }
+        .portfolio-overview {
+          max-width: 640px;
+          // width: 100%;
         }
       }
     }
